--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "ssr-facade"
+description = "implementation of ssr-core TasksFacade trait"
 version = "0.2.0"
+license = "MIT"
 edition = "2021"
 
 [dependencies]
