--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "ssr-facade"
 description = "implementation of ssr-core TasksFacade trait"
-version = "0.4.0"
+version = "0.5.0"
 license = "MIT"
 edition = "2021"
 
 [dependencies]
+s_text_input_f = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
-ssr-core = "0.25.1"
+ssr-core = "0.27"
