--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ssr-facade"
 description = "implementation of ssr-core TasksFacade trait"
-version = "0.5.2"
+version = "0.5.3"
 license = "MIT"
 edition = "2021"
 
@@ -9,3 +9,4 @@ edition = "2021"
 s_text_input_f = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 ssr-core = "0.27"
+rand = "0.8"
