--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ssr-facade"
 description = "implementation of ssr-core TasksFacade trait"
-version = "0.9.3"
+version = "0.10.0"
 license = "MIT"
 edition = "2021"
 
@@ -10,4 +10,5 @@ itertools = "0.13"
 rand = "0.8"
 s_text_input_f = "0.3"
 serde = { version = "1.0", features = ["derive"] }
-ssr-core = "0.37"
+ssr-core = "0.38"
+# ssr-core = { path = "../ssr-core/" }
